--- a/submissions/thesis-original/thesis/appendices.tex
+++ b/submissions/thesis-original/thesis/appendices.tex
@@ -3,3 +3,4 @@
 \subfile{../design/appendices}
 \subfile{../evaluation/appendices}
 \subfile{../discussion/appendices}
+\subfile{../conclusions/appendices}
