--- a/submissions/thesis-original/thesis/thesis.tex
+++ b/submissions/thesis-original/thesis/thesis.tex
@@ -83,6 +83,7 @@
 \newacronym{ann}{ANN}{Artificial Neural Network}
 \newacronym{auc}{AUC}{Area Under Curve}
 \newacronym{mcc}{MCC}{Matthews Correlation Coefficient}
+\newacronym{irr}{IRR}{Internal Rate of Return}
 
 % Fancyref support for subsections, source; https://github.com/openlilylib/tutorials/blob/master/aGervasoni/orchestralScores/example-materials/OLLbase.sty
 \newcommand*{\fancyrefsubseclabelprefix}{subsec}
